# 17.expense_tracker

./: .dockerignore  .gitignore  Dockerfile  Installation.md  Local_Installtion.md  README.md  database_view.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: deploy.yml
monitoring/: grafana-dashboard-expense-monitoring.json  prometheus.yml
src/agent/: chat_agent.py
src/api/: main.py
src/config/: settings.py
src/frontend/: app.py
src/mcp_servers/: expense_tracker.py
src/models/: expense.py
src/utils/: date_parser.py  db.py  init_postgres.py  logger.py  memory.py  metrics.py  redis_client.py
